# giac

./: INSTALL  Makefile.am  Makefile.in  README  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  changeversion  config.h  config.h.gc  config.h.in  config.h.ipaq  config.h.osx  config.h.win  config.h.wince  configure  configure.in  configure.in.debian  giac.specs  giac.specs32  giac_0.8.4-dfsg1.orig.tar.gz.delta  giac_0.8.4-dfsg1.orig.tar.gz.id  giac_1.2.3.25+dfsg1.orig.tar.xz.delta  giac_1.2.3.25+dfsg1.orig.tar.xz.id  giac_1.2.3.51+dfsg1.orig.tar.xz.delta  giac_1.2.3.51+dfsg1.orig.tar.xz.id  giac_1.2.3.53+dfsg1.orig.tar.xz.delta  giac_1.2.3.53+dfsg1.orig.tar.xz.id  giac_1.2.3.57+dfsg1.orig.tar.xz.delta  giac_1.2.3.57+dfsg1.orig.tar.xz.id  giac_1.4.9.69+dfsg1.orig.tar.xz.delta  giac_1.4.9.69+dfsg1.orig.tar.xz.id  giac_1.5.0.85+dfsg1.orig.tar.xz.delta  giac_1.5.0.85+dfsg1.orig.tar.xz.id  giac_1.5.0.87+dfsg1.orig.tar.xz.delta  giac_1.5.0.87+dfsg1.orig.tar.xz.id  giac_1.6.0.17+dfsg2.orig.tar.xz.delta  giac_1.6.0.17+dfsg2.orig.tar.xz.id  giac_1.6.0.23+dfsg1.orig.tar.xz.delta  (+49 more)
.github/workflows/: ci-sage.yml
check/: Makefile.am  Makefile.in  cas.out  chk_cas  factor.out  geo.out  integrate.out  limit.out  log  normalize.out  partfrac.out  testcas  testfactor  testgeo  testintegrate  testlimit  testnormalize  testpartfrac
debian/: README.Debian  README.source  TODO  changelog  clean  control  copyright  giac-doc.README.Debian  giac-doc.install  giac-doc.links  giac-doc.lintian-overrides  giac.js  info  libgiac-dev.install  libgiac0.install  libgiac0.lintian-overrides  not-installed  orig-tar.exclude  orig-tar.sh  rules  watch  xcas.install  xcas.links  xcas.lintian-overrides  xcas.manpages
debian/man/: cas_help.1  giac.1  pgiac.1
debian/patches/: arch_solid_checks.patch  autobuild  changeset_55367.patch  checks_equivs  d-dont-build-files-excluded.patch  d-dont-include-remote-scripts.patch  d-find-doc-files-at-buildtime.patch  d-workaround-armhf-hang.patch  d-workaround-hevea-bugs.patch  define-anyarg.patch  define_doubleval_for_bigendian.patch  destdir  disable_gbasis_swap.patch  disable_gbasis_swap_on_bigendian.patch  dont-bg-hevea.patch  dont-build-files-excluded.patch  dont-include-remote-scripts.patch  dont_build_dvi_and_ps.patch  drop_fr_doc.patch  find-doc-files-at-buildtime.patch  fix-48-bit-addr.patch  fix-dvi-bounding-box-errors.patch  fix-gettext-options.patch  fix-pdf-errors.patch  fix-string-compiler-error.patch  fix_bigendian_numerical_noise.patch  fix_doc_s390x.patch  fix_gcc11.patch  fix_input_parser.patch  fix_typos.patch  gcc-4.3  increase-pari-size.patch  intl  larger_pari_mem_size.patch  missing-build-rules.patch  no-X-deps-icas.patch  no-useless-deps.patch  non-free  plot-no-uchar.patch  series  (+8 more)
debian/source/: include-binaries  lintian-overrides  options
debian/upstream/: metadata
debian/upstream-doc-fr/: Makefile.am.Debian  algo.tex
doc/: Makefile.am  Makefile.in  README  aide_cas  index.html  nws.html  nws_en.html
doc/en/: Makefile.am  Makefile.in  cascmd_en.tex  casinter.tex  giac_us.info  html_mall  html_mtt  html_vall  pgcd.cc  pgcd.cpp  xcasex
doc/es/: Makefile.am  Makefile.in  giac_es.info~  html_mall  html_mtt  html_vall  xcasex  xcasmenu
doc/fr/: Makefile.am  Makefile.in  algo.html  algo.tex  demarr.eps  keywords  tutoriel.tex
doc/local/: Makefile.am  Makefile.in  html_mall  html_mtt  html_vall
doc/pari/: Standard_monadic_or_dyadic_operators.html
examples/: Makefile.am  Makefile.in
examples/Exemples/: Makefile.am  Makefile.in
examples/Exemples/analyse/: Makefile.am  Makefile.in  newton.xws
examples/Exemples/arit/: Makefile.am  Makefile.in
examples/Exemples/capes2006/: Makefile.am  Makefile.in
examples/Exemples/climat/: Makefile.am  Makefile.in  co2.xws  energie.xws  global_temp.xws  vostok.xws
examples/Exemples/crypto/: Makefile.am  Makefile.in
examples/Exemples/demo/: Makefile.am  Makefile.in
examples/Exemples/geo3d/: Makefile.am  Makefile.in  cone.xws
examples/Exemples/geometrie/: Makefile.am  Makefile.in  morley_demo.xws
examples/Exemples/logo/: Makefile.am  Makefile.in
examples/Exemples/opengl/: Makefile.am  Makefile.in
examples/Exemples/poly/: Makefile.am  Makefile.in  berle.xws
examples/Exemples/prog/: Makefile.am  Makefile.in
examples/arit/: Makefile.am  Makefile.in
examples/codage/: Makefile.am  Makefile.in
examples/demo/: Makefile.am  Makefile.in
examples/geo/: Makefile.am  Makefile.in
examples/groebner/: Makefile.am  Makefile.in
examples/lewisw/: Makefile.am  Makefile.in
examples/linalg/: Makefile.am  Makefile.in
examples/morley/: Makefile.am  Makefile.in  morley18
examples/polyfact/: Makefile.am  Makefile.in
examples/recur/: Makefile.am  Makefile.in
examples/simulation/: Makefile.am  Makefile.in
examples/tortue/: Makefile.am  Makefile.in
po/: POTFILES.in  cat-id-tbl.c  de.gmo  de.po  el.gmo  el.po  en.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  giac.pot  it.po  pt.po  zh.po
sage/: spkg-src
src/: Cfg.cc  Cfg.h  Editeur.cc  Editeur.h  Equation.cc  Equation.h  Fl_PS_Printer.cxx  Flv_CStyle.H  Flv_CStyle.cc  Flv_Data_Source.H  Flv_List.H  Flv_List.cc  Flv_Style.H  Flv_Style.cc  Flv_Table.H  Flv_Table.cc  Flve_Check_Button.H  Flve_Check_Button.cc  Flve_Combo.H  Flve_Combo.cc  Flve_Input.cc  Graph.cc  Graph.h  Graph3d.cc  Graph3d.h  Help1.cc  Help1.h  History.cc  History.h  Input.cc  Input.h  Makefile.64  Makefile.am  Makefile.fast  Makefile.in  Makefile.ipaq  Makefile.vcc  Makefilenew.win  Print.cc  Print.h  (+132 more)
