## Process this file with automake to produce Makefile.in
TESTS = 	chk_integrate chk_factor chk_normalize chk_partfrac chk_limit \
		chk_cas chk_geo
EXTRA_DIST = 	chk_integrate chk_factor chk_normalize chk_partfrac \
		chk_limit chk_cas chk_geo \
		testintegrate testfactor testnormalize testpartfrac \
		testlimit testcas testgeo \
		integrate.out factor.out normalize.out partfrac.out \
		limit.out cas.out geo.out flanex
