SUBDIRS = Exemples arit codage demo geo lewisw linalg morley polyfact recur simulation tortue groebner
DIST_SUBDIRS = Exemples arit codage demo geo lewisw linalg morley polyfact recur simulation tortue groebner
## Process this file with automake to produce Makefile.in
install-exec-hook:
	../mkinstalldirs $(prefix)/share/giac
	../mkinstalldirs $(prefix)/share/giac/examples

