EXTRA_DIST = xcasmenu xcasex keywords html_* 
install-exec-hook: 
	../../mkinstalldirs $(prefix)/share/giac/doc/local
	cp -f xcasmenu xcasex keywords $(prefix)/share/giac/doc/local/
	ln -sf ../fr/castor $(prefix)/share/giac/doc/local/castor
	ln -sf ../fr/casexo $(prefix)/share/giac/doc/local/casexo
	ln -sf ../fr/casrouge $(prefix)/share/giac/doc/local/casrouge
	ln -sf ../fr/casgeo $(prefix)/share/giac/doc/local/casgeo
	ln -sf ../fr/casexo $(prefix)/share/giac/doc/local/casexo
	ln -sf ../fr/cascas $(prefix)/share/giac/doc/local/cascas
	ln -sf ../fr/cassim $(prefix)/share/giac/doc/local/cassim
	ln -sf ../fr/algo.html $(prefix)/share/giac/doc/local/
	ln -sf ../en/cascmd_en $(prefix)/share/giac/doc/local/cascmd_local
	cp -f html_* $(prefix)/share/giac/doc/local/
	ln -sf ../en/casinter $(prefix)/share/giac/doc/local/casinter
