SUBDIRS = analyse capes2006 crypto geo3d logo prog arit climat demo geometrie poly opengl
DIST_SUBDIRS = 	analyse capes2006 crypto geo3d logo prog arit climat demo geometrie poly opengl
## Process this file with automake to produce Makefile.in
install-exec-hook:
	../../mkinstalldirs $(prefix)/share/giac
	../../mkinstalldirs $(prefix)/share/giac/examples
	../../mkinstalldirs $(prefix)/share/giac/examples/Exemples


