EXTRA_DIST = 	bezier equimorley  geo9 morley108 orthocentre.cxx \
bissectrice.cxx     geo1        lieu1           morley18      pantalon \
conj_harmonic1.cas  geo10       lieu2           morley1.fig   pantalon2 \
conj_harmonic2.cas  geo11       lieu3           morley2.fig   pointmorph \
conj_harmonic3.cas  geo12       lieu4           morleydess18  \
demomorley.cxx   geo13       lieu5           morleylem     puissance2.cas \
demomorley2         geo2        morleypara    puissance.cas \
envelop3t           geo3        morleypuzzel  \
envelopl            geo4        morleytri6 \
envelopp            geo5        morphing \
enveloppe           geo6        mediane.cxx     napoleon \
enveloppe3          geo7        mediatrice.cxx  napoleon.cxx \
envelopt            geo8        minimum.cxx     Ngone.cas \
simpson.cxx feuerbach.cxx carres.cxx terre.cas orbite.cas
install-exec-hook:
	../../mkinstalldirs $(prefix)/share/giac/examples/geo
	cp * $(prefix)/share/giac/examples/geo
