EXTRA_DIST =	calcul18 figure1  morleynum \
		demomorley1  dessinlem  figure2  morley108  morleypara \
		demonfig2    equimore   fiqure1  morley18   puzzel \
		trisectfig morley morleynum
install-exec-hook:
	../../mkinstalldirs $(prefix)/share/giac/examples/morley
	cp * $(prefix)/share/giac/examples/morley
