EXTRA_DIST = 	peano.cxx peanoarc.cas trisierpinski.cas sphynx.cxx permutation.cxx autres.cxx  flocon.cxx       plantes.cxx   sphinx.cxx carre.cxx        polygone.cxx  dragon.cxx   session.cxx   triangle.cxx
install-exec-hook:
	../../mkinstalldirs $(prefix)/share/giac/examples/recur
	cp * $(prefix)/share/giac/examples/recur
