EXTRA_DIST = newton.xws series_alt.xws ode.xws toile.xws
install-exec-hook:
	../../../mkinstalldirs $(prefix)/share/giac
	../../../mkinstalldirs $(prefix)/share/giac/examples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples/analyse
	cp -f *.xws $(prefix)/share/giac/examples/Exemples/analyse
