EXTRA_DIST = 	bezout.xws crible.xws diviseur.xws estprem.xws potence.xws \
		premier.xws powmod.xws

install-exec-hook:
	../../../mkinstalldirs $(prefix)/share/giac
	../../../mkinstalldirs $(prefix)/share/giac/examples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples/arit
	cp -f *.xws $(prefix)/share/giac/examples/Exemples/arit
