EXTRA_DIST = 2906.xws 3006.xws 0107.xws 0207.xws 0307.xws 0707.xws 0807.xws 1407.xws 1707.xws 2007.xws 2107.xws

install-exec-hook:
	../../../mkinstalldirs $(prefix)/share/giac
	../../../mkinstalldirs $(prefix)/share/giac/examples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples/capes2006
	cp -f *.xws $(prefix)/share/giac/examples/Exemples/capes2006
