EXTRA_DIST = calcform.xws arit.xws anniversaire.xws milieu.xws milieux.xws napoleon.xws oct06.xws polylogo.xws apmep.xws

install-exec-hook:
	../../../mkinstalldirs $(prefix)/share/giac
	../../../mkinstalldirs $(prefix)/share/giac/examples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples/demo
	cp -f *.xws $(prefix)/share/giac/examples/Exemples/demo
