EXTRA_DIST = cone.xws circon3d.xws
install-exec-hook:
	../../../mkinstalldirs $(prefix)/share/giac
	../../../mkinstalldirs $(prefix)/share/giac/examples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples/geo3d
	cp -f *.xws $(prefix)/share/giac/examples/Exemples/geo3d
