EXTRA_DIST = lieu_s05.xws capes.xws napoleon.xws simson.xws atelier.xws rouepoly.xws hexagone.xws astroide.xws morley_puzzle.xws morley_demo.xws

install-exec-hook:
	../../../mkinstalldirs $(prefix)/share/giac
	../../../mkinstalldirs $(prefix)/share/giac/examples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples/geometrie
	cp -f *.xws $(prefix)/share/giac/examples/Exemples/geometrie
