EXTRA_DIST = sapin.xws neige.xws jeu.xws tulipe.xws fleur.xws poule.xws

install-exec-hook:
	../../../mkinstalldirs $(prefix)/share/giac
	../../../mkinstalldirs $(prefix)/share/giac/examples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples/logo
	cp -f *.xws $(prefix)/share/giac/examples/Exemples/logo
