EXTRA_DIST = sphere.xws surface.xws
install-exec-hook:
	../../../mkinstalldirs $(prefix)/share/giac
	../../../mkinstalldirs $(prefix)/share/giac/examples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples/opengl
	cp -f *.xws $(prefix)/share/giac/examples/Exemples/opengl
