EXTRA_DIST = cardan.xws horner.xws racine.xws pgcd.xws berle.xws yun.xws hensel.xws reed_sol.xws

install-exec-hook:
	../../../mkinstalldirs $(prefix)/share/giac
	../../../mkinstalldirs $(prefix)/share/giac/examples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples/poly
	cp -f *.xws $(prefix)/share/giac/examples/Exemples/poly
