EXTRA_DIST = exemple.xws conformal.xws gauss_jordan.xws arbre.xws

install-exec-hook:
	../../../mkinstalldirs $(prefix)/share/giac
	../../../mkinstalldirs $(prefix)/share/giac/examples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples
	../../../mkinstalldirs $(prefix)/share/giac/examples/Exemples/prog
	cp -f *.xws $(prefix)/share/giac/examples/Exemples/prog
